<resources>
    <string name="app_name">Inventory App 1</string>
    <string name="string_price">Price</string>
    <string name="string_name">Name</string>
    <string name="string_quantity">Quantity</string>
    <string name="string_supplier">Supplier</string>
    <string name="string_insert_dummy_data">Insert Dummy Data</string>
    <string name="string_delete_all_books">Delete All Books</string>
    <string name="string_save">Save</string>
    <string name="string_delete">Delete</string>
    <string name="string_edit">Edit</string>
    <string name="string_phone">Phone</string>
    <string name="string_product_name">Product Name</string>
</resources>